Java build streamlining